Add projects page and resume

--- a/includes/header.html
+++ b/includes/header.html
@@ -1,23 +1,23 @@
 <!-- DESKTOP VIEW HEADER -->
-<header class="container-fluid header for_desktop" style="background-color:  #0a1e3a">
+<header class="container-fluid header for_desktop py-2" style="background-color:  #0a1e3a">
     <div class="row align-items-center justify-content-center">
         <nav class="col-auto d-flex flex-nowrap justify-content-center overflow-auto">
-            <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary me-2">
                 Home
             </button>
-            <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary me-2">
                 Projects
             </button>
-            <button type="button" onclick="window.location.href='resume'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='public/Steven_Dyer_Resume.pdf'" class="btn btn-primary me-2">
                 Resume
             </button>
-            <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary me-2">
                 Contact
             </button>
-            <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary me-2">
                 Github
             </button>
-            <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary me-2">
                 LinkedIn
             </button>
         </nav>
@@ -25,25 +25,25 @@
 </header>
 
 <!-- MOBILE VIEW HEADER -->
-<header class="container-fluid header for_mobile" style="background-color:  #0a1e3a">
+<header class="container-fluid header for_mobile py-2" style="background-color:  #0a1e3a">
     <div class="row align-items-center justify-content-center">
         <nav class="col-auto d-flex flex-nowrap justify-content-center overflow-auto">
-            <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary me-2">
                 Home
             </button>
-            <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary me-2">
                 Projects
             </button>
-            <button type="button" onclick="window.location.href='resume'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='public/Steven_Dyer_Resume.pdf'" class="btn btn-primary me-2">
                 Resume
             </button>
-            <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary me-2">
                 Contact
             </button>
-            <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary me-2">
                 Github
             </button>
-            <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary btn-lg me-2">
+            <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary me-2">
                 LinkedIn
             </button>
         </nav>
