--- a/includes/header.html
+++ b/includes/header.html
@@ -1,32 +1,44 @@
-<!-- RESPONSIVE HEADER -->
-<header class="container-fluid py-2" style="background-color: #0a1e3a;">
-  <div class="row justify-content-center align-items-center">
-    
-    <!-- Desktop buttons -->
-    <nav class="col-auto d-flex flex-nowrap justify-content-center desktop-menu">
-      <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary me-2">Home</button>
-      <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary me-2">Projects</button>
-      <button type="button" onclick="window.location.href='public/Steven_Dyer_Resume.pdf'" class="btn btn-primary me-2">Resume</button>
-      <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary me-2">Contact</button>
-      <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary me-2">Github</button>
-      <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary me-2">LinkedIn</button>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-dark" style="background-color: #0a1e3a;">
+  <div class="container-fluid">
+    <!-- Hamburger toggle (appears on small screens) -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
 
-    <!-- Mobile Hamburger -->
-    <div class="col-auto mobile-menu d-none">
-      <button id="hamburgerBtn" class="btn btn-primary">
-        &#9776; <!-- Hamburger icon -->
-      </button>
+    <!-- Navbar buttons -->
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item">
+          <a class="nav-link" href="index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="projects.html">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="public/Steven_Dyer_Resume.pdf">Resume</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="mailto:swdyer@mun.ca">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://github.com/stevenwdyer" target="_blank">Github</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="https://www.linkedin.com/in/stevenwdyer/" target="_blank">LinkedIn</a>
+        </li>
+      </ul>
     </div>
   </div>
+</nav>
 
-  <!-- Mobile dropdown menu (hidden by default) -->
-  <div id="mobileDropdown" class="d-none mt-2 text-center">
-    <button type="button" onclick="window.location.href='index.html'" class="btn btn-primary w-100 mb-1">Home</button>
-    <button type="button" onclick="window.location.href='projects.html'" class="btn btn-primary w-100 mb-1">Projects</button>
-    <button type="button" onclick="window.location.href='public/Steven_Dyer_Resume.pdf'" class="btn btn-primary w-100 mb-1">Resume</button>
-    <button type="button" onclick="window.location.href='mailto:swdyer@mun.ca'" class="btn btn-primary w-100 mb-1">Contact</button>
-    <button type="button" onclick="window.location.href='https://github.com/stevenwdyer'" class="btn btn-primary w-100 mb-1">Github</button>
-    <button type="button" onclick="window.location.href='https://www.linkedin.com/in/stevenwdyer/'" class="btn btn-primary w-100 mb-1">LinkedIn</button>
-  </div>
-</header>
+<style>
+  .navbar-dark .navbar-nav .nav-link {
+      color: #ffffff;
+      transition: color 0.3s; 
+  }
+
+  .navbar-dark .navbar-nav .nav-link:hover {
+      color: #e0e0e0;
+  }
+</style>
