Fix: Project images consistent sizing on mobile

--- a/includes/projects/battleship.html
+++ b/includes/projects/battleship.html
@@ -10,7 +10,7 @@
     This version of the game utilizes two Arduinos that communicate with each other via UART, 3x3 LED matrices for grid visualization, joysticks for ship/shot selection, buttons for ship/shot confirmation, passive buzzers for audio cues, and 7-segment displays for score/state tracking.<br><br>
 </p>
 
-<div id="battleshipCarousel" class="carousel slide">
+<div id="battleshipCarousel" class="carousel slide mx-auto" style="max-width: 100%;">
     <div class="carousel-inner justify-content-center">
         <div class="carousel-item active">
             <img src="public/battleship/battleship_controller.png"
