--- a/includes/projects/only_a_spoonful.html
+++ b/includes/projects/only_a_spoonful.html
@@ -10,7 +10,7 @@
     See this project's repository</a>
 </p>
 
-<div id="onlyASpoonfulCarousel" class="carousel slide">
+<div id="onlyASpoonfulCarousel" class="carousel slide mx-auto" style="max-width: 100%;">
     <div class="carousel-inner justify-content-center">
         <div class="carousel-item active">
             <img src="public/only_a_spoonful/spoonful_side.png"
