--- a/includes/projects/paradigm_2025.html
+++ b/includes/projects/paradigm_2025.html
@@ -15,10 +15,10 @@
 </ul>
 
 <div class="text-center">
-    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2025/paradigm_kart_track_2025.png" alt="Paradigm Kart on Race Track" style="max-width: 600px;"/>
+    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2025/paradigm_kart_track_2025.png" alt="Paradigm Kart on Race Track" style="max-width: 600px;  width: 100%; height: auto;"/>
     <p class="text-secondary fs-6 mt-2">Paradigm Kart on Race Track</p>
 </div>
 <div class="text-center">
-    <img class="img-fluid rounded ms-2 ps-2 w-50" src="public/paradigm_2025/paradigm_kart_lined_2025.png" alt="Paradigm Kart Lined Up" style="max-width: 600px;"/>
+    <img class="img-fluid rounded ms-2 ps-2 w-50" src="public/paradigm_2025/paradigm_kart_lined_2025.png" alt="Paradigm Kart Lined Up" style="max-width: 600px;  width: 100%; height: auto;"/>
     <p class="text-secondary fs-6 mt-2">Paradigm Kart Lined Up on Race Track</p>
 </div>
