--- a/includes/projects/paradigm_2026.html
+++ b/includes/projects/paradigm_2026.html
@@ -22,7 +22,7 @@ Contents:<br>
 </ul>
 
 <div class="text-center">
-    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2026/aks-2026-software-architecture-diagram.png" alt="Paradigm Engineering 2026 Software Diagram" style="max-width: 600px;"/>
+    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2026/aks-2026-software-architecture-diagram.png" alt="Paradigm Engineering 2026 Software Diagram" style="max-width: 600px;  width: 100%; height: auto;"/>
     <p class="text-secondary fs-6 mt-2">Paradigm Engineering 2026 Software Diagram</p>
 </div>
 
@@ -62,7 +62,7 @@ Contents:<br>
 </p>
 
 <div class="text-center">
-    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2026/paradigm_2026_simulation.png" alt="Paradigm Engineering 2026 Software Diagram" style="max-width: 600px;"/>
+    <img class="img-fluid rounded ms-2 ps-2" src="public/paradigm_2026/paradigm_2026_simulation.png" alt="Paradigm Engineering 2026 Software Diagram" style="max-width: 600px;  width: 100%; height: auto;"/>
     <p class="text-secondary fs-6 mt-2">Simulated Go-Kart in Gazebo</p>
 </div>
 
