--- a/includes/projects/stm32f1_pcb.html
+++ b/includes/projects/stm32f1_pcb.html
@@ -13,7 +13,7 @@
     <li>A standardized form factor, with a 19x50mm footprint and 2.54mm pitch headers, enabling compatibility with standard breadboards for rapid prototyping.</li>
 </ul>
 
-<div id="stm32f1BoardCarousel" class="carousel slide">
+<div id="stm32f1BoardCarousel" class="carousel slide mx-auto" style="max-width: 100%;">
     <div class="carousel-inner justify-content-center">
         <div class="carousel-item active">
             <img src="public/stm32f1_pcb/stm32f1_populated_top.png"
