Fix: updated resume and spelling errors

--- a/includes/projects/baja_2026.html
+++ b/includes/projects/baja_2026.html
@@ -6,12 +6,12 @@
 <p class="ds-5 m-2 dynamic_size_test">
     Memorial Baja is building a single-seat off-road Baja SAE racing vehicle to compete in the Baja SAE Ohio competition in September 2026.<br><br>
 
-    The vehicle has an ESP32-S3 microcontroller which connects to an onboard tablet via bluetooth low energy (BLE) to display real time sensor data, such a drive shaft RPM, tempurature, and fuel level, to display to the driver. As an electronics team member, my contributions include:
+    The vehicle has an ESP32-S3 microcontroller which connects to an onboard tablet via Bluetooth Low Energy (BLE) to display real-time sensor data, such a drive shaft RPM, temperature, and fuel level, to display to the driver. As an electronics team member, my contributions include:
 </p>
 <ul class="fs-6 lh-lg dynamic_size_text">
-    <li>Devleoped firmware written in C for the ESP32-S3 to measure drive shaft RPM from hall effect sensor data and establish communication to the tablet via BLE.</li>
-    <li>Sourced magnet with desired specifications for use with the hall effect sensor to calculate RPM.</li>
-    <li>Tested hall effect sensor using multimeters and osciliscopes to ensure accurate sensor readings.</li>
+    <li>Developed C firmware on an ESP32-S3 to measure drive shaft RPM from hall effect sensor data and establish communication to the digital display via BLE.</li>
+    <li>Sourced a magnet with desired specifications for use with the hall effect sensor to calculate RPM.</li>
+    <li>Tested the hall effect sensor using multimeters and oscilloscopes to ensure accurate sensor readings.</li>
 </ul>
 
 <div class="text-center">
