--- a/includes/projects/paradigm_2025.html
+++ b/includes/projects/paradigm_2025.html
@@ -1,17 +1,17 @@
 <p class="text-primary h1 mt-2 mb-4 mx-2 dynamic_size_text fw-bold">Paradigm Engineering 2025</p>
 
 <p class="ds-5 m-2 dynamic_size_test">
-    Paradigm Engineering built an autonomous go-kart to compete in the Autonomous Karting Series national grand-prix at Purdue University in June 2025.<br><br>
+    Paradigm Engineering built an autonomous go-kart to compete in the Autonomous Karting Series National Grand Prix at Purdue University in June 2025.<br><br>
 
     The go-kart features a NVIDIA Jetson Orin, a Pixhawk 6C, and an ESP32-S3 microcontroller along with a suite of other devices including a GPS sensor and antenna, RC receiver, and several DC motors.<br><br>
 
     As a software developer, my contributions included:
 </p>
 <ul class="fs-6 lh-lg dynamic_size_text">
-    <li>Wrote ESP32-S3 firmware in C to control the drive, steering, and braking motors, as well as a watchdog for e-stop.</li>
+    <li>Wrote C firmware on an ESP32-S3 to control the drive, steering, and braking motors, as well as a watchdog for e-stop.</li>
     <li>Developed tooling in Python to produce latitude and longitude .txt files from a .csv file to use as waypoints for the autonomous drive algorithm.</li>
     <li>Configured Pixhawk 6C PID parameters using Mission Planner for cleaner kart control.</li>
-    <li>Traveled with competition team and placed second overall at the Autonomous Karting Series 2025 national grand-prix.</li>
+    <li>Travelled with the competition team and placed second overall at the 2025 Autonomous Karting Series National Grand Prix.</li>
 </ul>
 
 <div class="text-center">
