Fix: minor spelling mistakes

--- a/includes/projects/baja_2026.html
+++ b/includes/projects/baja_2026.html
@@ -6,15 +6,15 @@
 <p class="ds-5 m-2 dynamic_size_test">
     Memorial Baja is building a single-seat off-road Baja SAE racing vehicle to compete in the Baja SAE Ohio competition in September 2026.<br><br>
 
-    The vehicle has an ESP32-S3 microcontroller which connects to an onboard tablet via Bluetooth Low Energy (BLE) to display real-time sensor data, such a drive shaft RPM, temperature, and fuel level, to display to the driver. As an electronics team member, my contributions include:
+    The vehicle has an ESP32-S3 microcontroller which connects to an onboard tablet  via Bluetooth Low Energy (BLE) to display real-time sensor data, such a drive shaft RPM, temperature, and fuel level, to display to the driver. As an electronics team member, my contributions include:
 </p>
 <ul class="fs-6 lh-lg dynamic_size_text">
-    <li>Developed C firmware on an ESP32-S3 to measure drive shaft RPM from hall effect sensor data and establish communication to the digital display via BLE.</li>
+    <li>Developed C firmware on an ESP32-S3 microcontroller to measure drive shaft RPM from hall effect sensor data and establish communication to the digital display via BLE.</li>
     <li>Sourced a magnet with desired specifications for use with the hall effect sensor to calculate RPM.</li>
     <li>Tested the hall effect sensor using multimeters and oscilloscopes to ensure accurate sensor readings.</li>
 </ul>
 
 <div class="text-center">
     <img class="img-fluid rounded ms-2 ps-2" src="public/baja_2026/baja_vehicle.png" alt="Memorial Baja Vehcile" style="max-width: 600px; width: 100%; height: auto;"/>
-    <p class="text-secondary fs-6 mt-2">Memorial Baja Vehicle</p>
+    <p class="text-secondary fs-6 mt-2">Memorial Baja Off-Road Vehicle</p>
 </div>
