--- a/includes/projects/paradigm_2025.html
+++ b/includes/projects/paradigm_2025.html
@@ -8,7 +8,7 @@
     As a software developer, my contributions included:
 </p>
 <ul class="fs-6 lh-lg dynamic_size_text">
-    <li>Wrote C firmware on an ESP32-S3 to control the drive, steering, and braking motors, as well as a watchdog for e-stop.</li>
+    <li>Wrote C firmware on an ESP32-S3 microcontroller to control the drive, steering, and braking motors, as well as a watchdog for e-stop.</li>
     <li>Developed tooling in Python to produce latitude and longitude .txt files from a .csv file to use as waypoints for the autonomous drive algorithm.</li>
     <li>Configured Pixhawk 6C PID parameters using Mission Planner for cleaner kart control.</li>
     <li>Travelled with the competition team and placed second overall at the 2025 Autonomous Karting Series National Grand Prix.</li>
