--- a/includes/projects/paradigm_2026.html
+++ b/includes/projects/paradigm_2026.html
@@ -48,7 +48,7 @@ Contents:<br>
 
 <p id="computer-vision" class="text-primary h2 my-3 mx-2 dynamic_size_text">Computer Vision</p>
 <p class="ds-5 m-2 dynamic_size_test">
-    The kart's computer vision system utilizes a ZED 2i stereo camera that sends a live camera feed to the Jetson Orin which runs a CNN to detect white lines on the race track. This is used alongside the main autonomous drive algorithm for improved waypoint following.
+    The kart's computer vision system utilizes a ZED 2i Stereo Camera that sends a live camera feed to the Jetson Orin which runs a CNN to detect white lines on the race track. This is used alongside the main autonomous drive algorithm for improved waypoint following.
 </p>
 
 <p id="custom-flight-software" class="text-primary h2 my-3 mx-2 dynamic_size_text">Custom Flight Software</p>
